Fix header wrap

--- a/styles.css
+++ b/styles.css
@@ -14,13 +14,12 @@ body {
   }
 
 .header {
-  height: 500px;
   background-color: #1f2937;
   color: #f9faf8;
   padding-top: 20px;
   padding-left: 50px;
   padding-right: 50px;
-
+  padding-bottom: 50px
 }
 
 .top-header {
@@ -45,8 +44,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 300px;
   gap: 20px;
+  flex-wrap: wrap;
 }
 
 .signup-box {
@@ -78,7 +77,7 @@ button {
 
 img {
   max-width: auto;
-  height: 300px;
+  height: 280px;
 }
 
 .box-section {
